Center align bug fix

--- a/RestaurantWebApp/src/app/customer-interface/customer-interface.component.sass
+++ b/RestaurantWebApp/src/app/customer-interface/customer-interface.component.sass
@@ -10,8 +10,17 @@ h1
     font-size: 50px
     border: none
     font-family: ink Free
-    margin: 0
     text-align: center
+    margin: auto
+    display: flex
+    flex-direction: column
+    align-items: center
+
+.centreDiv
+  margin: auto
+  display: flex
+  flex-direction: column
+  align-items: center
 
 
 
@@ -21,6 +30,3 @@ h1
 
 
 
-    
-    
-  
